# bindsight

./: .dockerignore  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CUSTOM_DOMAIN.md  Dockerfile  GO_LIVE.ps1  LICENSE  LICENSING.md  PUBLISH_PYPI.md  README.md  RENAME.md  SECURITY.md  Snakefile  mkdocs.yml  pyproject.toml  requirements.txt  streamlit_app.py
.github/workflows/: ci.yml  docker.yml  docs.yml  draft-pdf.yml  keep-warm-redundant.yml  keep-warm.yml  zenodo.yml
.huggingface/: README.md
announcement/: README.md  bluesky.md  linkedin.md  twitter.md
benchmarks/: PROVENANCE.md  binders.fasta  binders.tsv  build_eval_set.py  known.tsv  run_designer_benchmark.py  run_validation.py  sources.json
benchmarks/designer_benchmark/: DESIGNER_BENCHMARK.md  RESULTS.md  RESULTS_TEMPLATE.md  RUN_FREE_GPU.md  embed_binders.py  prepare_erbb2_target.py  results.json  score_developability.py  score_run.py
benchmarks/designer_benchmark/binders/: binder_0_seq0.fasta  binder_0_seq0_complex.cif  binder_0_seq1.fasta  binder_0_seq1_complex.cif  binder_1_seq0.fasta  binder_1_seq0_complex.cif  binder_1_seq1.fasta  binder_1_seq1_complex.cif  binder_2_seq0.fasta  binder_2_seq0_complex.cif  binder_2_seq1.fasta  binder_2_seq1_complex.cif  binder_3_seq0.fasta  binder_3_seq0_complex.cif  binder_3_seq1.fasta  binder_3_seq1_complex.cif  binder_4_seq0.fasta  binder_4_seq0_complex.cif  binder_4_seq1.fasta  binder_4_seq1_complex.cif  binder_5_seq0.fasta  binder_5_seq0_complex.cif  binder_5_seq1.fasta  binder_5_seq1_complex.cif  binder_6_seq0.fasta  binder_6_seq0_complex.cif  binder_6_seq1.fasta  binder_6_seq1_complex.cif  binder_7_seq0.fasta  binder_7_seq0_complex.cif  binder_7_seq1.fasta  binder_7_seq1_complex.cif  binder_8_seq0.fasta  binder_8_seq0_complex.cif  binder_8_seq1.fasta  binder_8_seq1_complex.cif  binder_9_seq0.fasta  binder_9_seq0_complex.cif  binder_9_seq1.fasta  binder_9_seq1_complex.cif  (+3 more)
benchmarks/validation/: RESULTS.md  provenance.json  report.html  results.json
bindsight/: __init__.py  cli.py  config.py  cost.py  plugins.py
bindsight/benchmark/: __init__.py  core.py  designer_bench.py  rediscovery.py
bindsight/deg/: __init__.py  pydeseq2_runner.py
bindsight/design/: __init__.py  _common.py  bindcraft.py  boltzgen.py  developability.py  embeddings.py  protocol.py  rfdiff_mpnn.py
bindsight/epitopes/: __init__.py  surface_bind.py
bindsight/export/: __init__.py  ro_crate.py
bindsight/io/: __init__.py  cbioportal.py  gdc.py  paths.py
bindsight/pipelines/: __init__.py  caveats.py  discover.py  full_run.py
bindsight/provenance/: __init__.py  manifest.py
bindsight/rank/: __init__.py  scoring.py
bindsight/report/: __init__.py  html.py  streamlit_app.py  webapp.py
bindsight/report/templates/: report.css  report.html.j2
bindsight/runners/: __init__.py  colab.py  job_exec.py  kaggle.py  kaggle_kernel.py  local_docker.py  mock.py  modal_runner.py  notebook.py  notebook_content.py  protocol.py  tools.py
bindsight/structures/: __init__.py  alphafolddb.py  plddt.py  topology.py
bindsight/surfaceome/: __init__.py  surfy.py
bindsight/surfaceome/data/: surfy_offline.txt
bindsight/targets/: __init__.py  ensembl_uniprot.py  gtex.py  open_targets.py
bindsight/validate/: __init__.py  af2_ig.py  boltz2.py  chai1r.py  protocol.py
data/surface_bind/: README.md
docs/: colab-design-howto.md  hf-spaces-deploy.md  how-to-use.md  index.md  keeping-the-demo-warm.md  positioning.md  robots.txt  use-cases.md  what-is-bindsight.md  what-is-xpr2bind.md
envs/: design.yaml  discover.yaml  report.yaml  validate.yaml
examples/: benchmark_held_out.yaml  tcga_luad.yaml
examples/demo/: config.yaml  counts.tsv  design.tsv
outreach/: day6_handoff.md  email_log.md
overrides/: main.html
paper/: LICENSE  README.md  paper.bib  paper.md
paper/biorxiv/: manuscript.aux  manuscript.bbl  manuscript.bcf  manuscript.blg  manuscript.out  manuscript.run.xml  manuscript.tex  references.bib
paper/validation/: DEFENSE_NOTES.md  manuscript.md
scripts/: assemble_manifest.py  run_deg.py  run_design.py  run_discover.py  run_rank.py  run_report.py  run_validate.py
tests/: __init__.py  conftest.py  test_alphafolddb_client.py  test_assemble_manifest.py  test_benchmark.py  test_caveats.py  test_cbioportal.py  test_cli.py  test_cli_demo_and_report.py  test_cli_doctor.py  test_config.py  test_cost.py  test_deg_runner.py  test_demo_e2e.py  test_designer_bench.py  test_designers_validators.py  test_developability.py  test_embeddings.py  test_ensembl_uniprot.py  test_eval_set.py  test_export_ro_crate.py  test_failure_taxonomy.py  test_gdc.py  test_gtex.py  test_job_exec.py  test_job_exec_retention.py  test_kaggle_kernel.py  test_manifest.py  test_notebook_helpers.py  test_open_targets_client.py  test_package_imports.py  test_pipelines_discover.py  test_pipelines_full_run.py  test_plddt.py  test_rank.py  test_rediscovery.py  test_report_html.py  test_runners_colab.py  test_runners_mock.py  test_runners_modal_local.py  (+5 more)
tests/fixtures/: tiny_counts.tsv  tiny_design.tsv
tests/fixtures/embeddings/: binders_esm2_t6.npy
tools/: generate_cv.js  poll_helmholtz_url.py
tools/keep-warm/: README.md  keep_warm.py  setup_task_scheduler.bat  unregister_task_scheduler.bat
xpr2bind/: __init__.py  cli.py  cost.py
xpr2bind/deg/: __init__.py  pydeseq2_runner.py
xpr2bind/design/: __init__.py  bindcraft.py  boltzgen.py  protocol.py  rfdiff_mpnn.py
xpr2bind/epitopes/: __init__.py  surface_bind.py
xpr2bind/io/: __init__.py  paths.py
xpr2bind/pipelines/: __init__.py  discover.py
xpr2bind/provenance/: __init__.py  manifest.py
xpr2bind/rank/: __init__.py
xpr2bind/report/: __init__.py  html.py  streamlit_app.py
xpr2bind/runners/: __init__.py  colab.py  kaggle.py  local_docker.py  mock.py  modal_runner.py  notebook.py
xpr2bind/structures/: __init__.py  alphafolddb.py
xpr2bind/surfaceome/: __init__.py  surfy.py
xpr2bind/targets/: __init__.py  open_targets.py
xpr2bind/validate/: __init__.py  af2_ig.py  boltz2.py  chai1r.py  protocol.py
(+7 files in other folders)
