[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

# -----------------------------------------------------------------------------
# Project metadata
# -----------------------------------------------------------------------------
[project]
name = "bindsight"
version = "0.1.0"
description = "A reproducible bridge from RNA-seq to de novo protein binder design, with end-to-end provenance."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
keywords = [
    "protein-design",
    "bioinformatics",
    "RNA-seq",
    "de-novo-binder-design",
    "AlphaFold",
    "RFdiffusion",
    "ProteinMPNN",
    "Boltz",
    "BindCraft",
    "reproducibility",
    "PROV-O",
    "RO-Crate",
    "target-discovery",
]
authors = [
    { name = "Mikhaeel Atef Rizk Wahba", email = "mikhaeelatefrizk@proton.me" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# -----------------------------------------------------------------------------
# Runtime dependencies — kept intentionally minimal for the package itself.
# Heavy stage-specific deps (pydeseq2, snakemake, biopython) live in conda envs
# under envs/*.yaml so users can install only what they need.
# -----------------------------------------------------------------------------
dependencies = [
    "click>=8.1",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
    "requests>=2.32",
    "rich>=13.7",          # CLI output formatting
    "tenacity>=8.4",       # API retry policies
    "platformdirs>=4.2",   # cache locations
    "jinja2>=3.1",         # Colab/Modal notebook templating
]

[project.optional-dependencies]
discover = [
    "pydeseq2>=0.5",
    "pandas>=2.2",
    "pyarrow>=16",
    "numpy>=1.26",
    "biopython>=1.83",
    "gql[requests]>=3.5",  # Open Targets GraphQL
    "openpyxl>=3.1",       # parse the SURFY surfaceome .xlsx
]
report = [
    "py3Dmol>=2.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "jupyter>=1.0",
]
runners = [
    "modal>=0.64",
    "google-api-python-client>=2.0",  # Colab/Drive
    "kaggle>=1.6",
]
all = [
    "bindsight[discover,report,runners]",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-mock>=3.12",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-requests",
    "types-pyyaml",
    "pre-commit>=3.7",
    "build>=1.2",
    "twine>=5.1",
]

[project.urls]
Homepage = "https://github.com/mikhaeelatefrizk/bindsight"
Documentation = "https://github.com/mikhaeelatefrizk/bindsight#readme"
Repository = "https://github.com/mikhaeelatefrizk/bindsight"
Issues = "https://github.com/mikhaeelatefrizk/bindsight/issues"
Changelog = "https://github.com/mikhaeelatefrizk/bindsight/blob/main/CHANGELOG.md"

[project.scripts]
bindsight = "bindsight.cli:main"
# Headless design+validation executor — entry point used by the Docker image and
# the local/native GPU runner (and importable as python -m bindsight.runners.job_exec).
bindsight-design = "bindsight.runners.job_exec:main"

# -----------------------------------------------------------------------------
# Plugin entry points — designers, validators, runners can be added by 3rd
# parties without forking bindsight.
# -----------------------------------------------------------------------------
[project.entry-points."bindsight.designers"]
rfdiff_mpnn = "bindsight.design.rfdiff_mpnn:RFdiffMPNNDesigner"
bindcraft   = "bindsight.design.bindcraft:BindCraftDesigner"
boltzgen    = "bindsight.design.boltzgen:BoltzGenDesigner"

[project.entry-points."bindsight.validators"]
boltz2  = "bindsight.validate.boltz2:Boltz2Validator"
chai1r  = "bindsight.validate.chai1r:Chai1rValidator"
af2_ig  = "bindsight.validate.af2_ig:AF2IGValidator"

[project.entry-points."bindsight.runners"]
colab        = "bindsight.runners.colab:ColabRunner"
modal        = "bindsight.runners.modal_runner:ModalRunner"
kaggle       = "bindsight.runners.kaggle:KaggleRunner"
local_docker = "bindsight.runners.local_docker:LocalDockerRunner"
mock         = "bindsight.runners.mock:MockRunner"

# -----------------------------------------------------------------------------
# Tooling
# -----------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["bindsight"]

# Include non-Python data files in the wheel: surfaceome offline list,
# report templates / CSS / JS, plus example data needed by `bindsight demo`.
[tool.hatch.build.targets.wheel.shared-data]
"examples/demo" = "bindsight_demo"

[tool.hatch.build.targets.wheel.force-include]
"bindsight/surfaceome/data/surfy_offline.txt" = "bindsight/surfaceome/data/surfy_offline.txt"
"bindsight/report/templates/report.html.j2"   = "bindsight/report/templates/report.html.j2"
"bindsight/report/templates/report.css"       = "bindsight/report/templates/report.css"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".snakemake", "runs", "results"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # bugbear
    "UP",   # pyupgrade
    "SIM",  # simplify
    "RUF",  # ruff-specific
    "PT",   # pytest-style
    "D",    # pydocstyle
]
ignore = [
    "D100", "D104", "D105", "D107",  # missing docstrings on modules / packages / dunder / __init__
    "E501",                            # line too long (formatter handles)
    "RUF001",                          # ambiguous Unicode in strings (× and similar are intentional)
    "RUF002",                          # ambiguous Unicode in docstrings (× and similar are intentional)
    "RUF003",                          # ambiguous Unicode in comments
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["D", "S101"]
"bindsight/**/__init__.py" = ["D", "F401"]
"scripts/**/*" = ["D", "PLW0127"]    # Snakemake injects globals; doc-strings live in module docstring

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["tests/fixtures", "build", "dist"]

[[tool.mypy.overrides]]
module = ["pydeseq2.*", "Bio.*", "py3Dmol.*", "modal.*", "snakemake.*", "kaggle.*"]
ignore_missing_imports = true
# These third-party libs ship no type info; don't follow into them so calls
# aren't flagged as untyped in our (strict) code.
follow_imports = "skip"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=bindsight",
    "--cov-report=term-missing",
]
testpaths = ["tests"]
markers = [
    "gpu: tests that require an NVIDIA GPU (skipped in CI)",
    "slow: long-running tests against real APIs (skipped by default)",
    "integration: end-to-end tests across modules",
]

[tool.coverage.run]
branch = true
source = ["bindsight"]
omit = [
    "bindsight/_version.py",
    "*/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
